fixed alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
 }
 
 .pageContainer {
-    width: 77%;
+    width: 83%;
     margin-inline: auto;
 }
 
