--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,4 +1,6 @@
 .heroContainer {
+    display: grid;
+    gap: 24px;
     width: 100%;
 }
 
@@ -6,67 +8,50 @@
     width: 100%;
 }
 
+.aboutMeButton {
+    border: none;
+    outline: none;
+    display: inline-flex;
+    padding: 0;
+    margin: 0;
+    margin-top: 32px;
+    align-items: center;
+    height: 48px;
+    width: 64%;
+    background-color: var(--clr-dark-blue);
+}
 
-/* @media only screen and (min-width: 768px) {
+.buttonIcon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: hsla(0, 0%, 0%, 0.1);
+    height: 48px;
+    width: 24%;
+}
 
+.arrowIcon {
+    height: 16px;
+    background: none;
+}
+
+.buttonText {
+    background: none;
+    width: 76%;
+    color: white;
+}
+
+@media only screen and (min-width: 768px) {
     .heroContainer {
-        background-image: url("../../assets/images/homepage/desktop/image-homepage-hero@2x.jpg");
-        background-size: cover;
-        height: 600px;
-        position: relative;
+       grid-template-areas: "overlap";
+    }
+
+    .heroImage {
+        grid-area: overlap;
     }
 
     .heroText {
-        width: 44%;
-        height: 60%;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
+        grid-area: overlap;
+        align-self: end;
     }
-
-    .heroTitle {
-        padding-right: 56px;
-        padding-bottom: 53px;
-    }
-
-    button {
-        border: none;
-        outline: none;
-        display: inline-flex;
-        padding: 0;
-        margin: 0;
-        align-items: center;
-    }
-
-    .aboutMeButton {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        height: 48px;
-        width: 18%;
-        background-color: var(--clr-dark-blue);
-    }
-
-    .buttonIcon {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: hsla(0, 0%, 0%, 0.1);
-        height: 48px;
-        width: 24%;
-    }
-
-    .arrowIcon {
-        height: 16px;
-        background: none;
-    }
-
-    .buttonText {
-        background: none;
-        width: 76%;
-        color: white;
-    }
-} */
+}
