--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -2,7 +2,7 @@
     text-align: center;
     position: absolute;
     top: 100px;
-    right: 11.5vw;
+    right: 8.5%;
     z-index: 1000;
     padding-block: 1rem;
     background-color: var(--clr-dark-blue);
